# pheno-forge-smoke

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SSOT.md  WORKLOG.md  llms.txt  pheno-forge-smoke.cdx.json
.github/workflows/: ci.yml
scripts/: run-smoke.sh
sidecars/: Cargo.toml  pheno-sidecar-stub.cdx.json
sidecars/src/: main.rs
src/: lib.rs  main.rs
