[package]
name = "pheno-sidecar-stub"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Local-stub HTTP server that emulates the pheno-forge-plugin sidecars for end-to-end smoke testing"

[[bin]]
name = "pheno-sidecar-stub"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
